[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2fa-exporter"
version = "1.0.0"
description = "Export QR codes from a 2FAS JSON backup file."
requires-python = ">=3.8"
dependencies = [
  "cryptography>=41.0.0",
  "qrcode>=7.4.2",
  "pillow>=10.3.0",
]
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
2fa-exporter = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
# Package the local packages so they are importable after installation
include = ["OTPTools*", "BackupProcessors*", "src*"]
exclude = ["tests*"]
